--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Sergei Lodyagin <serg@kogorta.dp.ua>
 Mike Hearn <hearn@google.com>
 Miron Cuperman (a.k.a. devrandom) <c1.devrandom@niftybox.net>
 Xiaofeng Guo <xiaofengguo@google.com>
