--- a/README
+++ b/README
@@ -11,12 +11,12 @@ find your unzipped Maven install directory.
 Now try running one of the example apps:
 
   cd examples
-  mvn exec:java -Dexec.mainClass=com.google.bitcoin.examples.ForwardingService -Dexec.args="<insert a xxxxxxx address here>"
+  mvn exec:java -Dexec.mainClass=com.google.bitcoin.examples.ForwardingService -Dexec.args="<insert a compcoin address here>"
 
-It will download the block chain and eventually print a Xxxxxxx address. If you send coins to it,
+It will download the block chain and eventually print a Compcoin address. If you send coins to it,
 you should get them back a few minutes later when a block is solved.
 
-You can also use a command line tool that exposes basic Xxxxxxx operations
+You can also use a command line tool that exposes basic Compcoin operations
 
 On UNIX:
   cd tools
@@ -33,7 +33,7 @@ block per second or less). Find a node that isn't heavily loaded to connect to.
 
 If you get a SocketDisconnectedException, the node you've connected to has its max send buffer set to low
 (unfortunately the default is too low). Connect to a node that has a bigger send buffer,
-settable by passing -maxsendbuffer=25600 to the Xxxxxxx C++ software.
+settable by passing -maxsendbuffer=25600 to the Compcoin C++ software.
 
 To regenerate the protobuf Java sources from src/bitcoin.proto, install the protobuf compiler package version 2.4.x:
 
